// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid md  renders grid-md-6 1`] = `
.c0 {
  grid-template-columns: repeat(12, 1fr);
}

@media (min-width: 768px) {
  .c0 {
    grid-template-columns: repeat(6, 1fr);
  }
}

<div
  class="c0"
  data-class="grid-md-6"
  data-grid="grid"
>
  <div>
    col 1
  </div>
  <div>
    col 2
  </div>
  <div>
    col 3
  </div>
  <div>
    col 4
  </div>
  <div>
    col 5
  </div>
  <div>
    col 6
  </div>
</div>
`;

exports[`Grid md  renders grid-md-auto 1`] = `
.c0 {
  grid-template-columns: repeat(12, 1fr);
}

@media (min-width: 768px) {
  .c0 {
    grid-template-columns: repeat(2, auto);
  }
}

<div
  class="c0"
  data-class="grid-md-[repeat(2, auto)]"
  data-grid="grid"
>
  <div>
    col 1
  </div>
  <div>
    col 2
  </div>
</div>
`;
